2008-01-20  Richard Jones  <rjones@redhat.com>

	Version 0.4.0.2 released.

2008-01-18  Richard Jones  <rjones@redhat.com>

	Move to autogeneration of many C bindings.
	* configure.ac, libvirt/libvirt_c.c, libvirt/generator.pl: Many
	  C bindings can now be autogenerated using a Perl script.
	  Also includes preliminary support for the experimental
	  storage API.

2008-01-08  Richard Jones  <rjones@redhat.com>

	Get node_info just once for each connection.
	* vc_connections.ml: Get node_info just once for each connection,
	  which is more efficient.
	* vc_connections.mli: Tidy up.

	Type Vc_domain_ops.dops_callback_fn for clarity.
	* virt-ctrl/vc_domain_ops.mli, virt-ctrl/vc_domain_ops.ml,
	  virt-ctrl/vc_mainwindow.mli: Give a type name to the domain_ops
	  callback type, for extra clarity.

	Change comments virt-manager -> virt-ctrl.
	* virt-ctrl/*.ml, virt-ctrl/*.mli: Change comments virt-manager ->
	  virt-ctrl.

	Move programming information to libvirt generated doc.
	* README, libvirt/libvirt.mli: Moved programming information to
	  libvirt generated documentation, greatly expanded examples and
	  other issues.
	* examples/Makefile.in, examples/node_info.ml, examples/.depend:
	  Added node_info example program.
	* .hgignore, Makefile.in: Ignore, clean up node_info binary.
	* examples/list_domains.ml: Make a read-only connection.

	Clean up *.exe files.
	* Makefile.in: Clean up *.exe files.

	Version 0.4.0.1 released.
	* Makefile.in: Provide a 'winupload' target.

	Rename some dialogs in virt-ctrl.
	* virt-ctrl/vc_mainwindow.ml: Fix some "virtual machine manager" ->
	  "virt-ctrl" dialogs in main window.

	Fix bad paths in wininstaller.nsis.in.
	* wininstaller.nsis.in: 
	* .hgignore: Ignore *.orig files.

	Fix native virt-ctrl on Windows.
	* virt-ctrl/Makefile.in, virt-ctrl/mingw-gcc-wrapper.ml: Wrapper
	  around 'gcc' to fix native virt-ctrl builds on Windows/MinGW.
	* .hgignore: Ignore *.exe files.

2008-01-07  Richard Jones  <rjones@redhat.com>
